<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
    android:id="@+id/calender"
    android:icon="@drawable/ic_baseline_calendar_today_24"
    android:title="@string/calender"
    app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:title="@string/about"/>

    <item
        android:id="@+id/about"
        android:title="@string/home"/>

    <item
        android:id="@+id/search"
        android:title="@string/navigation"/>

</menu>