<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bluishgreen"
    tools:context=".FabActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:src="@drawable/img"
        android:id="@+id/Image"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/months_is"
            android:layout_margin="10dp"
            android:id="@+id/month"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_month_name"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_note"
    android:layout_gravity="center"

    android:layout_margin="10dp"
    android:textColor="@color/black"
    android:textSize="28sp"/>

    <EditText
        android:id="@+id/et_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_note"
        android:layout_margin="30dp"
        android:inputType="text"
        android:textColorHint="@color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submit_btn"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>


</LinearLayout>